src/test/ui/mismatched_types/overloaded-calls-bad.stderr
error[E0308]: mismatched types
  --> $DIR/overloaded-calls-bad.rs:38:17
   |
38 |     let ans = s("what");    //~ ERROR mismatched types
   |                 ^^^^^^ expected isize, found reference
   |
   = note: expected type `isize`
              found type `&'static str`

error[E0057]: this function takes 1 parameter but 0 parameters were supplied
  --> $DIR/overloaded-calls-bad.rs:42:15
   |
42 |     let ans = s();
   |               ^^^ expected 1 parameter

error[E0057]: this function takes 1 parameter but 2 parameters were supplied
  --> $DIR/overloaded-calls-bad.rs:45:17
   |
45 |     let ans = s("burma", "shave");
   |                 ^^^^^^^^^^^^^^^^ expected 1 parameter

error: aborting due to 3 previous errors

